feat(app): setup modules & routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,9 +6,7 @@
     </h1>
   </div>
 
-  <div class="block">
-    <a class="btn-game" href="tetris">Tetris</a>
-    <a class="btn-game" href="puzzle">Puzzle</a>
-  </div>
+  <router-outlet></router-outlet>
+
 
 </div>
