feat(layouts): setup high level layouts (1)

--- a/src/app/modules/tetris/tetris.component.html
+++ b/src/app/modules/tetris/tetris.component.html
@@ -1,1 +1,6 @@
-<p>tetris works!</p>
+<div id="tetris-game">
+  <app-screen-container></app-screen-container>
+  <div class="float-right">
+    <app-info-center></app-info-center>
+  </div>
+</div>
