feat(layouts): setup high level layouts (2)

--- a/src/app/modules/tetris/info-center/game-info/game-info.component.html
+++ b/src/app/modules/tetris/info-center/game-info/game-info.component.html
@@ -1,1 +1,8 @@
-<p>game-info works!</p>
+<div class="game-info p-2">
+  <div>
+    <b>Level: </b><span>1</span>
+  </div>
+  <div>
+    <b>Score: </b><span>0</span>
+  </div>
+</div>
