--- a/src/app/modules/tetris/tetris.component.html
+++ b/src/app/modules/tetris/tetris.component.html
@@ -1,6 +1,7 @@
-<div id="tetris-game">
-  <app-screen-container></app-screen-container>
-  <div class="float-right">
+<div id="tetris-game" class="d-flex p-2">
+  <app-screen-container class="game-flex-col"></app-screen-container>
+  <div class="game-flex-col ml-auto p-1">
     <app-info-center></app-info-center>
+    <app-control-panel></app-control-panel>
   </div>
 </div>
