feat: Rewrite the component of Tetris Shape (1)

--- a/src/app/modules/tetris/shared/components/tetris-shape/tetris-shape.component.html
+++ b/src/app/modules/tetris/shared/components/tetris-shape/tetris-shape.component.html
@@ -1,1 +1,7 @@
-<div class="tetris-shape" [ngStyle]="styles"></div>
+<div class="tetris-shape" [ngStyle]="styles">
+    <ng-container *ngIf="tiles$ | async as tiles">
+        <ng-container *ngFor="let tile of tiles">
+            <app-tetris-tile [options]="tile"></app-tetris-tile>
+        </ng-container>
+    </ng-container>
+</div>
