feat: re-organize the elements' positions in Info Center

--- a/src/app/modules/tetris/info-center/game-info/game-info.component.html
+++ b/src/app/modules/tetris/info-center/game-info/game-info.component.html
@@ -1,8 +1,10 @@
 <div class="game-info p-2">
-  <div>
-    <b>Level: </b><span>1</span>
+  <div class="d-flex justify-content-between align-items-baseline">
+    <span class="info-name">SCORE</span>
+    <span class="info-value">0</span>
   </div>
-  <div>
-    <b>Score: </b><span>0</span>
+  <div class="d-flex justify-content-between align-items-baseline">
+    <span class="info-name">LEVEL</span>
+    <span class="info-value">1</span>
   </div>
 </div>
