--- a/src/app/modules/tetris/info-center/preview-next/preview-next.component.html
+++ b/src/app/modules/tetris/info-center/preview-next/preview-next.component.html
@@ -1,3 +1,8 @@
-<div class="preview-next p-2">
-
+<div class="preview-next p-2 d-flex justify-content-between align-items-baseline">
+    <span class="info-name">NEXT</span>
+    <app-tetris-shape class="info-value"
+      [type]="0"
+      [direction]="0"
+      [color]="2"
+    ></app-tetris-shape>
 </div>
