--- a/src/app/modules/tetris/info-center/preview-next/preview-next.component.scss
+++ b/src/app/modules/tetris/info-center/preview-next/preview-next.component.scss
@@ -1,6 +1,11 @@
+@import '../info-center.common.scss';
+
 .preview-next {
-  border: 2px solid #a000ff;
-  width: 132px;
+  width: 100%;
   height: 132px;
-  background-color: #a0c0ff;
+
+  app-tetris-shape {
+    display: inline-block;
+    position: relative;
+  }
 }
